HFP-2485 Fix navigation width on mobile

--- a/src/styles/_navigationbar.scss
+++ b/src/styles/_navigationbar.scss
@@ -27,6 +27,7 @@
 
   &.h5p-digibook-fullwidth {
     max-width: none;
+    width: 100%;
   }
 
   .navigation-list {
